Sandbox/initial gameservers (#7)
* Updating roles and adding gameservers controller

* Adding initial game servers page

* Fixing route for GameServers controller

* Adding initial game servers management

* Adding sandbox tear down pipeline
